# algoverse

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  paper_t4.yaml
data/: README.md  prompts.jsonl  prompts_v2.jsonl
docs/: limitations.md  methodology.md
docs/plans/: 2026-05-16-pre-refusal-signatures.md
notebooks/: run_paper_experiments_colab.ipynb  run_qwen_colab.ipynb
reports/: baseline_comparison.csv  counterfactual_pair_margins.csv  direction_geometry.csv  error_analysis.md  family_heldout_results.csv  layer_probe_metrics.csv  logit_lens_direction.csv  logit_lens_refusal_tokens.csv  paper_run_metadata.json  prefix_best_layers.csv  prefix_emergence.csv  run_metadata.json
scripts/: 00_validate_dataset.py  01_extract_hidden_states.py  02_train_layer_probes.py  03_make_figures.py  04_run_guard_demo.py  05_run_baselines.py  06_group_heldout_eval.py  07_prefix_emergence.py  08_direction_geometry.py  09_logit_lens_direction.py  10_make_paper_figure.py
src/pre_refusal_signatures/: __init__.py  analysis.py  config.py  dataset.py  extraction.py  guard.py  plotting.py  probing.py  reporting.py
tests/: test_dataset.py  test_guard.py  test_probing.py
